Fix side navigation jumping when scrolling the webpage

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -82,7 +82,7 @@ h1 {
 }
 
 .affix {
-    margin-top: -70px;
+    margin-top: -100px;
 }
 
 .nav-tabs > .active > a, .nav-tabs > .active > a:hover {
